# lista3

server/: .gitignore  CHANGELOG.md  default.nix  entity_relations_diagram.drawio  lista.cabal  schema.sql  shell.nix
server/app/: Main.hs
server/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
server/src/: Lista.hs  Main.hs
server/src/Lista/: Auxiliary.hs  Db.hs  Oidc.hs  ServerError.hs
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/public/: index.html  manifest.json
web/src/: api.ts  index.css  index.tsx  util.ts
web/src/app/: App.tsx  app.tsx
web/src/app/apis/: todoApi.ts
web/src/app/components/: Checkbox.tsx  Star.tsx  Todo.tsx  addTodo.tsx  checkbox.tsx  editTodo.tsx  todo.tsx  todoList.tsx
web/src/app/helpers/: todo.tsx  unsorted.tsx
web/src/app/types/: DB.ts  todo.ts
web/src/components/: AddTodo.tsx  Auth.tsx  Checkbox.tsx  DesktopHome.tsx  DropDown.tsx  EditTodo.tsx  Home.tsx  InvitationItem.tsx  InvitationsPanel.tsx  ListItem.tsx  ListPanel.tsx  MediaQuery.tsx  MenuBar.tsx  MobileHome.tsx  RenderCounter.tsx  Routes.tsx  SharePanel.tsx  Spinner.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  useActiveList.tsx  useOnClickOutside.tsx  useSidebar.tsx
web/src/d.ts/: DB.d.ts
