cabal-version:      2.4
name:               lista
version:            0.1.0.0

author:             Martin Fredin
maintainer:         fredin.martin@gmail.com

extra-source-files: CHANGELOG.md

executable lista
    main-is:         Lista.hs

    other-modules: 
      Lista.Db
      Lista.Oidc 
      Lista.Auxiliary
      Lista.ServerError

    build-depends:    base ^>=4.15.1.0
     , relude
     , aeson
     , aeson-pretty
     , binary
     , blaze-html
     , blaze-markup
     , bytestring
     , case-insensitive
     , cereal
     , containers
     , generic-lens
     , http-client
     , http-client-tls
     , http-types
     , jose-jwt
     , lens
     , lens-aeson
     , oidc-client
     , random
     , servant
     , servant-blaze
     , servant-server
     , text
     , time
     , vector
     , wai
     , warp >= 3.2
     , mtl
     , wai-cors
     , uuid
     , uuid-types
     , postgresql-simple
     , QuickCheck
     , quickcheck-instances
     , cookie
     , servant-docs
     , resource-pool ^>=0.3.1.0
     , extra
     , warp-tls
                    
    default-extensions: NoImplicitPrelude
    hs-source-dirs:   src
    default-language: Haskell2010
